tls-cert-deploy-ingress/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sample-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: sample-app

  template:
    metadata:
      labels:
        app: sample-app

    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
